--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper">
-  <p>This is navigation</p>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Search" [(ngModel)]="search" (ngModelChange)="onSearchUpdate()" value="">
+  </mat-form-field>
   <div class="buttons__wrapper">
-    <div   *ngFor="let lol of [1,2,3,4,4,5,5,6,6,7,7,8,8,8,8,9,9,9,9,9,99,9,9,99,9,9,99]">
-      <button (click)="onUpdate(lol)">{{lol}}</button>
+    <div *ngFor="let topic of (topics$ | async)">
+      <p>{{topic}}</p>
     </div>
   </div>
 </div>
