--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,3 @@
 <div class="wrapper">
-  <div highlight="all" [innerHTML]="metadata | innerHTML"></div>
+  <div highlight="all" [innerHTML]="(metadata | async) | innerHTML"></div>
 </div>
