created admin sccreen

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,5 @@
 <div class="toolbar_mat">
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/angular-icon-logo-png-transparent.png" alt="Smiley face">
-      <span>Learn Angular</span>
-      <span class="example-spacer"></span>
-      <img class="logo"  (click)="onpenRepo()"  src="https://material.angular.io/assets/img/homepage/github-circle-white-transparent.svg" alt="github-img">
-    </mat-toolbar-row>
-  </mat-toolbar>
+  <app-toolbar></app-toolbar>
 </div>
 <div class="wrapper">
   <mat-card class="login-card mat-card">
