added  a form to create a post with topic name

--- a/src/app/createpost/createpost.component.css
+++ b/src/app/createpost/createpost.component.css
@@ -3,3 +3,7 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
 }
+.preview-code{
+    overflow-y: scroll;
+    height: calc(100vh - 400px);
+}
