--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="toolbar">
   <mat-toolbar-row>
     <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/angular-icon-logo-png-transparent.png" alt="Smiley face">
-    <span>Learn Angular</span>
+    <span class="title">Learn Angular</span>
     <span class="example-spacer"></span>
     <img class="logo"  (click)="onpenRepo()"  src="https://material.angular.io/assets/img/homepage/github-circle-white-transparent.svg" alt="github-img">
   </mat-toolbar-row>
