--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,8 +1,7 @@
-
 .logo {
   cursor: pointer;
   padding: 10px;
-  width: 42px; 
+  width: 42px;
   height: 42px;
 }
 
@@ -13,9 +12,12 @@
 .example-full-width {
   width: 100%;
 }
-.toolbar{
+
+.toolbar {
   background: #2b3136;
 }
-.title{
+
+.title {
   color: wheat;
+  font-weight: bold;
 }
